# pharmalink

./: README.md  guide.md  pyproject.toml
data/processed/: final_pharmalink_dataset.parquet  pharma_features.parquet
notebooks/: 01_eda.ipynb  02_feature_engneering.ipynb
src/data/: make_dataset.py
src/features/: feature_engineering.py
